стили для главной страницы

--- a/index.html
+++ b/index.html
@@ -33,18 +33,21 @@
                             </a>
                            </div>
                            <li class="menu-top__item">
-                               <a class="menu-top__link" href="catalog.html">Каталог товаров</a>
+                               <a class="menu-top__link menu-top__link--catalog" href="catalog.html">Каталог товаров</a>
                            </li>
                            <li class="menu-top__item">
                                <a class="menu-top__link" href="#">Вязание на заказ</a>
                            </li>
                            <li class="menu-top__item">
                                <form class="search-form" action="" method="get">
+                                   <label class="search-label">Поиск по сайту</label>
                                    <input class="search-input" type="search" name="search" placeholder="Поиск по сайту">
-                                   <button class="search-submit" type="submit">кнопка поиска</button>
+                                   <button class="search-submit" type="submit"></button>
                                </form>
                            </li>
+                           <!-- <div class="menu-top__cart"></div> -->
                            <li class="menu-top__item menu-top__item--cart">
+                                <a class="menu-top__cart"></a>
                                 <a class="menu-top__link menu-top__link--cart" href="#">Корзина: пока пуста</a>
                            </li>
                            <li class="menu-top__item menu-top__item--delivery">
