--- a/catalog.html
+++ b/catalog.html
@@ -43,8 +43,9 @@
                             </li>
                             <li class="menu-top__item">
                                 <form class="search-form" action="" method="get">
+                                    <label class="search-label">Поиск по сайту</label>
                                     <input class="search-input" type="search" name="search" placeholder="Поиск по сайту">
-                                    <button class="search-submit" type="submit">кнопка поиска</button>
+                                    <button class="search-submit" type="submit"></button>
                                 </form>
                             </li>
                             <li class="menu-top__item menu-top__item--cart">
