переделала некоторые блоки главной страницы

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
                     <nav class="hamburger__nav">
                         <ul class="menu-top__list">
                             <div class="menu-top__logo">
-                            <a class="menu-top__logo-link" href="#">
-                                <img class="menu-top__logo-mobile" src="src/img/logo-mobile.png" width="" height="" alt="Mishka">
+                            <a class="menu-top__logo-link" href="index.html"><i class="menu-top__logo-img"></i></a>
+                                <!-- <img class="menu-top__logo-mobile" src="src/img/logo-mobile.png" width="" height="" alt="Mishka">
                             </a>
                             <a class="menu-top__logo-link" href="#">
                                 <img class="menu-top__logo-tablet" src="src/img/logo-tablet.png" width="" height="" alt="Mishka">
                             </a>
                             <a class="menu-top__logo-link" href="#">
                                 <img class="menu-top__logo-desktop" src="src/img/logo-desktop.png" width="" height="" alt="Mishka">
-                            </a>
+                            </a> -->
                            </div>
                            <li class="menu-top__item">
                                <a class="menu-top__link menu-top__link--catalog" href="catalog.html">Каталог товаров</a>
@@ -45,10 +45,11 @@
                                    <button class="search-submit" type="submit"></button>
                                </form>
                            </li>
-                           <!-- <div class="menu-top__cart"></div> -->
                            <li class="menu-top__item menu-top__item--cart">
-                                <a class="menu-top__cart"></a>
-                                <a class="menu-top__link menu-top__link--cart" href="#">Корзина: пока пуста</a>
+                                <!-- <a class="menu-top__cart"></a> -->
+                                <a class="menu-top__link menu-top__link--cart" href="#">Корзина: пока пуста
+                                    <i class="menu-top__cart"></i>
+                                </a>
                            </li>
                            <li class="menu-top__item menu-top__item--delivery">
                                <p class="menu-top__text menu-top__text--delivery">Бесплатная доставка по России</p>
@@ -102,19 +103,13 @@
           </div>
       </section>
       <section class="about-us">
-          <h3 class="about-us__title">Коротко о нас:</h3>
+        <h3 class="about-us__title">Коротко о нас:</h3>
           <ul class="about-us__list">
-              <div class="about-us__icon1"></div>
-              <li class="about-us__feature">Экологически чистые материалы</li>
-              <div class="about-us__icon2"></div>
+              <li class="about-us__feature ">Экологически чистые материалы</li>
               <li class="about-us__feature">Скандинавский стиль по российской цене</li>
-              <div class="about-us__icon3"></div>
               <li class="about-us__feature">Увеличивает лайки на фотографиях</li>
-              <div class="about-us__icon4"></div>
               <li class="about-us__feature">Связано вручную с любовью и умилением</li>
-              <div class="about-us__icon5"></div>
               <li class="about-us__feature">Поддержка отечественного производителя</li>
-              <div class="about-us__icon6"></div>
               <li class="about-us__feature">Поставляется в подарочной упаковке</li>
           </ul>
      </section>
