отстилизовала блок контакты для мобильной версии/внесла изменения в html

--- a/catalog.html
+++ b/catalog.html
@@ -25,7 +25,8 @@
                     <nav class="hamburger__nav">
                         <ul class="menu-top__list">
                             <div class="menu-top__logo">
-                                <a class="menu-top__logo-link" href="index.html">
+                                    <a class="menu-top__logo-link" href="index.html"><i class="menu-top__logo-img"></i></a>
+                                <!-- <a class="menu-top__logo-link" href="index.html">
                                     <img class="menu-top__logo-mobile" src="./src/img/logo-mobile.png" width="" height="" alt="Mishka">
                                 </a>
                                 <a class="menu-top__logo-link" href="index.html">
@@ -33,7 +34,7 @@
                                 </a>
                                 <a class="menu-top__logo-link" href="index.html">
                                     <img class="menu-top__logo-desktop" src="./src/img/logo-desktop.png" width="" height="" alt="Mishka">
-                                </a>
+                                </a> -->
                             </div>
                             <li class="menu-top__item">
                                 <a class="menu-top__link" href="catalog.html">Каталог товаров</a>
@@ -49,7 +50,9 @@
                                 </form>
                             </li>
                             <li class="menu-top__item menu-top__item--cart">
-                                <a class="menu-top__link menu-top__link--cart" href="#">Корзина: пока пуста</a>
+                                <a class="menu-top__link menu-top__link--cart" href="#"><i class="menu-top__cart"></i>
+                                     Корзина: пока пуста
+                                </a>
                             </li>
                             <li class="menu-top__item menu-top__item--delivery">
                                 <p class="menu-top__text menu-top__text--delivery">Бесплатная доставка по России</p>
