--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                            </li>
                            <li class="menu-top__item menu-top__item--cart">
                                 <!-- <a class="menu-top__cart"></a> -->
-                                <a class="menu-top__link menu-top__link--cart" href="#">Корзина: пока пуста
-                                    <i class="menu-top__cart"></i>
+                                <a class="menu-top__link menu-top__link--cart" href="#"><i class="menu-top__cart"></i>
+                                    Корзина: пока пуста
                                 </a>
                            </li>
                            <li class="menu-top__item menu-top__item--delivery">
@@ -142,7 +142,7 @@
        </div>
     </section>
     <section class="contacts">
-        <h3 class="contacts__title">Контакты</h3>
+        <!-- <h3 class="contacts__title">Контакты</h3>
         <table class="contacts__table table">
             <tr class="contacts__row table__row">
                 <td class="contacts__cell table__cell">e-mail:</td>
@@ -152,7 +152,17 @@
                 <td class="contacts__cell table__cell">адрес:</td>
                 <td class="contacts__cell table__cell">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</td>
             </tr>
-        </table>
+        </table> -->
+        <h3 class="contacts__title">Контакты</h3>
+        <div class="contacts__wrap">
+           <p class="contacts__text">E-mail:</p>
+           <a class="contacts__link" href="#">info@mimimishkashop.ru</a>
+         </div>
+         <div class="contacts__wrap">
+           <p class="contacts__text">Адрес:</p>
+           <address class="contacts__address">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</address>
+        </div>
+        
         <div class="map">
             <img class="map__img" src="" width="" height="" alt="Карта">
         </div>
