отстилизован футер для главной страницы мобильной версии

--- a/index.html
+++ b/index.html
@@ -172,17 +172,19 @@
 <footer class="footer">
     <div class="footer__social">
         <a class="footer__link" href="#">
-            <img class="footer__insta" src="" width="" height="" alt="instagram">
+            <i class="footer__insta" src="" width="" height="" alt="instagram"></i>
         </a>
         <a class="footer__link" href="#">
-            <img class="footer__facebook" src="" width="" height="" alt="facebook">
+            <i class="footer__facebook" src="" width="" height="" alt="facebook"></i>
         </a>
         <a class="footer__link" href="#">
-            <img class="footer__twitter" src="" width="" height="" alt="twitter">
+            <i class="footer__twitter" src="" width="" height="" alt="twitter"></i>
         </a>
     </div>
     <div class="footer__copyright">
-        <p class="footer__creator">Разработано</p>
+        <p class="footer__creator">Разработано
+            <img class="footer__icon">
+        </p>
     </div>
 </footer>
 <div class="modal-ctg">
