normalize/picturefill/html hamburger fixed

--- a/form.html
+++ b/form.html
@@ -5,20 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="dist/css/main.css">
+    <script src="picturefill.js"></script>
     <title>Mishka - интернет - магазин</title>
 </head>
 <body>
     <header class="header">
         <nav class="nav">
-            <div class="menu-top">
-                <!-- меню-гамбургер -->
-                    <div class="hamburger">
-                        <!-- переключатель меню -->
-                        <input class="hamburger__input" type="checkbox" id="toogle">
-                        <label class="hamburger__menu" for="toogle">
-                                <!-- когда меню открыто - кнопка закрытия -->
-                            <span class="hamburger__btn"></span>
-                        </label>
+                <button class="hamburger-btn">
+                        <span class="hamburger-box">
+                            <span class="hamburger-inner"></span>
+                        </span>
+                    </button>
                         <nav class="hamburger__nav">
                             <div class="menu-top__logo">
                                 <a class="menu-top__logo-link" href="#">
