--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="dist/css/style/main.css">
+    <script src="picturefill.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
 <script src="src/js/main.js"></script>
 <title>Mishka - интернет - магазин - каталог</title>
@@ -13,14 +14,11 @@
     <header class="header">
        <nav class="nav">
            <div class="menu-top">
-                <!-- меню-гамбургер -->
-                <div class="hamburger">
-                    <!-- переключатель меню -->
-                    <input class="hamburger__input" type="checkbox" id="toogle">
-                    <label class="hamburger__menu" for="toogle">
-                        <!-- когда меню открыто - кнопка закрытия -->
-                            <span class="hamburger__btn"></span>
-                    </label>
+                <button class="hamburger-btn">
+                        <span class="hamburger-box">
+                            <span class="hamburger-inner"></span>
+                        </span>
+                    </button>
                     <nav class="hamburger__nav">
                         <ul class="menu-top__list">
                             <div class="menu-top__logo">
