--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="dist/css/style/main.css">
+    <link rel="stylesheet" href="dist/css/main.css">
     <script src="picturefill.js"></script>
     <title>Mishka - интернет - магазин</title>
 </head>
