--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="dist/css/style/main.css">
+    <link rel="stylesheet" href="dist/css/main.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
 <script src="src/js/main.js"></script>
 <title>Mishka - интернет - магазин - каталог</title>
@@ -73,7 +73,7 @@
                     <div class="catalog-price">
                         <p class="catalog-price__number">1 200 руб.</p>
                         <a class="catalog-price__link" href="#">
-                          <img src="src/img/cart.svg.png" alt="" class="catalog-price__link-pic">
+                          <img src="src/img/cart.png" alt="" class="catalog-price__link-pic">
                         </a>
                     </div>
                     </div>
@@ -86,7 +86,7 @@
                       <div class="catalog-price">
                         <p class="catalog-price__number">690 руб.</p>
                         <a class="catalog-price__link" href="#">
-                          <img src="src/img/cart.svg.png" alt="" class="catalog-price__link-pic">
+                          <img src="src/img/cart.png" alt="" class="catalog-price__link-pic">
                         </a>
                     </div>
                     </div>
@@ -100,7 +100,7 @@
                       <div class="catalog-price">
                         <p class="catalog-price__number">1 500 руб.</p>
                         <a class="catalog-price__link" href="#">
-                          <img src="src/img/cart.svg.png" alt="" class="catalog-price__link-pic">
+                          <img src="src/img/cart.png" alt="" class="catalog-price__link-pic">
                         </a>
                       </div>
                     </div>
