--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="dist/css/style/main.css">
+<link rel="stylesheet" href="dist/css/main.css">
+    <!--<link rel="stylesheet" href="dist/css/style/main.css">-->
     <title>Mishka - интернет - магазин</title>
 </head>
 <body>
@@ -162,7 +163,7 @@
            <p class="contacts__text">Адрес:</p>
            <address class="contacts__address">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</address>
         </div>
-        
+
         <div class="map">
             <img class="map__img" src="" width="" height="" alt="Карта">
         </div>
