Corrections in the back

--- a/catalog.html
+++ b/catalog.html
@@ -152,7 +152,29 @@
 <div class="overlay"></div><!--переместить-->
 </section>
        </main>
-       <footer class="footer">
+<footer class="footer">
+<div class="footer__logo"></div>
+  <div class="footer__social">
+    <a class="footer__link" href="#">
+      <i class="footer__insta" src="" width="" height="" alt="instagram"></i>
+    </a>
+    <a class="footer__link" href="#">
+      <i class="footer__facebook" src="" width="" height="" alt="facebook"></i>
+    </a>
+    <a class="footer__link" href="#">
+      <i class="footer__twitter" src="" width="" height="" alt="twitter"></i>
+    </a>
+  </div>
+  <div class="footer__copyright">
+    <p class="footer__creator">Разработано
+      <img class="footer__icon">
+    </p>
+  </div>
+</footer>
+
+
+
+       <!--<footer class="footer">
         <div class="footer__logo"></div>
             <div class="footer__social">
               <div class="footer__insta"></div>
@@ -163,6 +185,6 @@
                 <p class="footer__creator">Разработано</p>
             <div class="footer__creator-pic"></div>
             </div>
-        </footer>
+        </footer>-->
 </body>
 </html>
