--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
     </section>
 </main>
 <footer class="footer">
+<div class="footer__logo"></div>
     <div class="footer__social">
         <a class="footer__link" href="#">
             <i class="footer__insta" src="" width="" height="" alt="instagram"></i>
