--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="dist/css/main.css">
     <script src="picturefill.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
-<script src="src/js/main.js"></script>
+
 <title>Mishka - интернет - магазин - каталог</title>
 </head>
 <body>
@@ -134,8 +134,8 @@
                 <div class="video-page__descr">
                       <p> По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
                 </div>
-<button class="btn player__btn">Сделать заказ</button>
-<div class="modal-ctg">
+<button class="btn player__btn" id="myBtn">Сделать заказ</button>
+<div class="modal-ctg"  id="myModal">
   <h2 class="modal-ctg__title">Добавить в корзину</h2>
   <p class="modal-ctg__text">Выберите размер</p>
     <div class="modal-ctg__form">
@@ -146,7 +146,7 @@
       <input class="modal-ctg__input" type="radio" name="check">
       <label class="modal-ctg__size">L</label>
     </div>
-    <button  class="btn modal-ctg__btn">Добавить</button>
+    <button  class="btn modal-ctg__btn" >Добавить</button>
 
 </div>
 <div class="overlay"></div><!--переместить-->
@@ -173,7 +173,7 @@
 </footer>
 
 
-
+<script src="src/js/main.js"></script>
        <!--<footer class="footer">
         <div class="footer__logo"></div>
             <div class="footer__social">
