--- a/catalog.html
+++ b/catalog.html
@@ -14,12 +14,12 @@
     <header class="header">
        <nav class="nav">
            <div class="menu-top">
-                <button class="hamburger-btn">
-                        <span class="hamburger-box">
-                            <span class="hamburger-inner"></span>
-                        </span>
+                <div class="hamburger">
+                    <button class="hamburger-btn">
+                        <span class="hamburger-box"></span>
                     </button>
-                    <nav class="hamburger__nav">
+                </div>
+                    <!-- <nav class="hamburger__nav"> -->
                         <ul class="menu-top__list">
                             <div class="menu-top__logo">
                                     <a class="menu-top__logo-link" href="index.html"><i class="menu-top__logo-img"></i></a>
@@ -55,8 +55,7 @@
                                 <p class="menu-top__text menu-top__text--delivery">Бесплатная доставка по России</p>
                             </li>
                       </ul>
-                 </nav>
-             </div>
+                 <!-- </nav> -->
          </div>
     </nav>
 </header>
