--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
             <div class="menu-top">
                 <div class="hamburger">
                     <button class="hamburger-btn">
-                        <span class="hamburger-box">
-                            <span class="hamburger-inner"></span>
-                        </span>
+                        <span class="hamburger-box"></span>
                     </button>
-                    <nav class="hamburger__nav">
+                </div>
+                    <!-- <nav class="hamburger__nav"> -->
                         <ul class="menu-top__list">
                             <div class="menu-top__logo">
                             <a class="menu-top__logo-link" href="index.html"><i class="menu-top__logo-img"></i></a>
@@ -32,7 +31,9 @@
                             </a> -->
                            </div>
                            <li class="menu-top__item">
-                               <a class="menu-top__link menu-top__link--catalog" href="catalog.html">Каталог товаров</a>
+                               <a class="menu-top__link menu-top__link--catalog" href="catalog.html">
+                                   Каталог товаров
+                                </a>
                            </li>
                            <li class="menu-top__item">
                                <a class="menu-top__link" href="#">Вязание на заказ</a>
@@ -52,9 +53,14 @@
                            <li class="menu-top__item menu-top__item--delivery">
                                <p class="menu-top__text menu-top__text--delivery">Бесплатная доставка по России</p>
                            </li>
+                           <li class="menu-top__item menu-top__item--new">
+                               <a class="menu-top__link">Новые поступления</a>
+                           </li>
+                           <li class="menu-top__item menu-top__item--sale">
+                                <a class="menu-top__link">Распродажа</a>
+                           </li>
                       </ul>
-                   </nav>
-                </div>
+                   <!-- </nav> -->
             </div>
             <div class="menu-bottom">
                 <picture>
