--- a/form.html
+++ b/form.html
@@ -11,52 +11,37 @@
 <body>
     <header class="header">
         <nav class="nav">
-                <button class="hamburger-btn">
-                        <span class="hamburger-box">
-                            <span class="hamburger-inner"></span>
-                        </span>
+            <div class="menu-top">
+                <div class="hamburger">
+                    <button class="hamburger-btn">
+                        <span class="hamburger-box"></span>
                     </button>
-                        <nav class="hamburger__nav">
-                            <div class="menu-top__logo">
-                                <a class="menu-top__logo-link" href="#">
-                                    <img class="menu-top__logo-img" src="" width="" height="" alt="Mishka">
-                                </a>
-                            </div>
-                            <ul class="menu-top__list">
-                                <li class="menu-top__item">
-                                    <a class="menu-top__link" href="#">Каталог товаров</a>
-                                </li>
-                                <li class="menu-top__item">
-                                    <a class="menu-top__link" href="#">Вязание на заказ</a>
-                                </li>
-                                <li class="menu-top__item">
-                                    <form class="search-form">
-                                        <label class="search">Поиск по сайту</label>
-                                        <input class="input-search" type="search">
-                                    </form>
-                                </li>
-                                <li class="menu-top__item">
-                                    <a class="menu-top__link" href="#">Корзина: пока пуста</a>
-                                </li>
-                            </ul>
-                        </nav>
-                   </div>
-           </div>
-           <div class="menu-bottom">
-                <ul class="menu-bottom__list">
-                    <div class="header__img">
-                        <img class="menu-bottom__img" src="" width="" height="" alt="">
-                    </div>
-                    <h1 class="menu-bottom__title">Милые штуки ручной работы для дома</h1>
-                    <li class="menu-bottom__item menu-bottom__item--left">
-                        <a class="menu-bottom__link" href="#"><p class="menu-bottom__caption">Предметы интерьера</p></a>
-                    </li>
-                    <li class="menu-bottom__item menu-bottom__item--right">
-                        <a class="menu-bottom__link" href="#"><p class="menu-bottom__caption">Детские игрушки</p></a>
-                    </li>
-               </ul>
-          </div>
-       </nav>
+                </div>
+                     <ul class="menu-top__list">
+                        <div class="menu-top__logo">
+                            <a class="menu-top__logo-link" href="index.html">
+                                <i class="menu-top__logo-img"></i>
+                            </a>
+                        </div>
+                        <li class="menu-top__item">
+                            <a class="menu-top__link" href="#">Каталог товаров</a>
+                        </li>
+                        <li class="menu-top__item">
+                            <a class="menu-top__link" href="#">Вязание на заказ</a>
+                        </li>
+                        <li class="menu-top__item">
+                            <form class="search-form" action="" method="get">
+                                <label class="search-label">Поиск по сайту</label>
+                                <input class="search-input" type="search" name="search" placeholder="Поиск по сайту">
+                                <button class="search-submit" type="submit"></button>
+                            </form>
+                        </li>
+                        <li class="menu-top__item">
+                            <a class="menu-top__link" href="#">Корзина: пока пуста</a>
+                        </li>
+                    </ul>
+              </div>
+         </nav>
    </header>
    <main class="main">
        <div class="page-form">
@@ -124,17 +109,19 @@
    <footer class="footer">
         <div class="footer__social">
             <a class="footer__link" href="#">
-                <img class="footer__insta" src="" width="" height="" alt="instagram">
+                <i class="footer__insta" src="" width="" height="" alt="instagram"></i>
             </a>
             <a class="footer__link" href="#">
-                <img class="footer__facebook" src="" width="" height="" alt="facebook">
+                <i class="footer__facebook" src="" width="" height="" alt="facebook"></i>
             </a>
             <a class="footer__link" href="#">
-                <img class="footer__twitter" src="" width="" height="" alt="twitter">
+                <i class="footer__twitter" src="" width="" height="" alt="twitter"></i>
             </a>
         </div>
         <div class="footer__copyright">
-            <p class="footer__creator">Разработано</p>
+            <p class="footer__creator">Разработано
+                <img class="footer__icon">
+            </p>
         </div>
     </footer>
   </body>
