added a wavy line under the block

--- a/catalog.html
+++ b/catalog.html
@@ -23,15 +23,7 @@
                         <ul class="menu-top__list">
                             <div class="menu-top__logo">
                                     <a class="menu-top__logo-link" href="index.html"><i class="menu-top__logo-img"></i></a>
-                                <!-- <a class="menu-top__logo-link" href="index.html">
-                                    <img class="menu-top__logo-mobile" src="./src/img/logo-mobile.png" width="" height="" alt="Mishka">
-                                </a>
-                                <a class="menu-top__logo-link" href="index.html">
-                                    <img class="menu-top__logo-tablet" src="./src/img/logo-tablet.png" width="" height="" alt="Mishka">
-                                </a>
-                                <a class="menu-top__logo-link" href="index.html">
-                                    <img class="menu-top__logo-desktop" src="./src/img/logo-desktop.png" width="" height="" alt="Mishka">
-                                </a> -->
+
                             </div>
                             <li class="menu-top__item">
                                 <a class="menu-top__link" href="catalog.html">Каталог товаров</a>
@@ -62,6 +54,9 @@
 </header>
     <main class="main-catalog">
         <h2 class="main-catalog__title">Каталог товаров</h2>
+<div class="main-catalog__title-line">
+
+</div>
             <section class="catalog">
               <div class="catalog__img"></div>
                 <div class="catalog__item">
@@ -105,11 +100,7 @@
                 </div>
             </section>
             <section class="player-video">
-
-                <!--<video class="player__video-player">
-                    <source class="player__video" src="img/video-svg.png" type="video" controls="" poster="" item-width="260px" item-height="150px">
-                </video>-->
-                <div class="player-process">
+          <div class="player-process">
                   <h3 class="player-process__title">Процесс производства</h3>
               <a href="" class="player-process__link">
               <img src="" alt="" class="player-process__link-pic">
@@ -122,16 +113,7 @@
               <div class="video-page__link-pic">
           </div>
         </div>
-
-<!--<a href="" class="video-page__link">
-  <img src="src/img/play-svg.png" alt="" class="video-page__link-pic">
-</a>-->
-
-<!--<a href="">
-  <img src="src/img/video-mobile.png" alt="" class="video-page__video">
-</a>-->
-
-                <div class="video-page__descr">
+    <div class="video-page__descr">
                       <p> По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
                 </div>
 <button class="btn player__btn" id="myBtn">Сделать заказ</button>
@@ -149,7 +131,7 @@
     <button  class="btn modal-ctg__btn" >Добавить</button>
 
 </div>
-<div class="overlay"></div><!--переместить-->
+<div class="overlay"></div>
 </section>
        </main>
 <footer class="footer">
