--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="dist/css/main.css">
+<script src="src/js/main.js"></script>
     <script src="picturefill.js"></script>
     <title>Mishka - интернет - магазин</title>
 </head>
@@ -101,7 +102,7 @@
                    <img class="catalog__img" src="src/img/triple-mobile-1x.jpg" width="" height="" alt="Вязаные корзинки">
                 <div class="catalog__to-buy">
                     <p class="catalog__price">Цена: 990 руб.</p>
-                    <button class="btn catalog__btn">Заказать</button>
+                    <button class="btn catalog__btn" >Заказать</button>
                 </div>
           </div>
       </section>
@@ -191,7 +192,7 @@
         </p>
     </div>
 </footer>
-<div class="modal-ctg">
+<div class="modal-ctg" id="myModal">
     <h2 class="modal-ctg__title">Добавить в корзину</h2>
     <p class="modal-ctg__text">Выберите размер</p>
     <ul class="modal-ctg__list">
