--- a/index.html
+++ b/index.html
@@ -163,14 +163,16 @@
             </tr>
         </table> -->
         <h3 class="contacts__title">Контакты</h3>
-        <div class="contacts__wrap">
-           <p class="contacts__text">E-mail:</p>
-           <a class="contacts__link" href="#">info@mimimishkashop.ru</a>
-         </div>
-         <div class="contacts__wrap">
-           <p class="contacts__text">Адрес:</p>
-           <address class="contacts__address">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</address>
-        </div>
+        <div class="contacts__box">
+            <div class="contacts__wrap">
+                <p class="contacts__text">E-mail:</p>
+                <a class="contacts__link" href="#">info@mimimishkashop.ru</a>
+            </div>
+            <div class="contacts__wrap">
+                <p class="contacts__text">Адрес:</p>
+                <address class="contacts__address">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</address>
+           </div>
+       </div>
 
         <div class="map">
             <img class="map__img" src="" width="" height="" alt="Карта">
