--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="dist/css/main.css">
-    <script src="picturefill.js"></script>
+    <script src="src/js/picturefill.js"></script>
     <title>Mishka - интернет - магазин</title>
 </head>
 <body>
