--- a/catalog.html
+++ b/catalog.html
@@ -26,26 +26,34 @@
 
                             </div>
                             <li class="menu-top__item">
-                                <a class="menu-top__link" href="catalog.html">Каталог товаров</a>
-                            </li>
-                            <li class="menu-top__item">
-                                <a class="menu-top__link" href="#">Вязание на заказ</a>
-                            </li>
-                            <li class="menu-top__item">
-                                <form class="search-form" action="" method="get">
-                                    <label class="search-label">Поиск по сайту</label>
-                                    <input class="search-input" type="search" name="search" placeholder="Поиск по сайту">
-                                    <button class="search-submit" type="submit"></button>
-                                </form>
-                            </li>
-                            <li class="menu-top__item menu-top__item--cart">
-                                <a class="menu-top__link menu-top__link--cart" href="#"><i class="menu-top__cart"></i>
-                                     Корзина: пока пуста
-                                </a>
-                            </li>
-                            <li class="menu-top__item menu-top__item--delivery">
-                                <p class="menu-top__text menu-top__text--delivery">Бесплатная доставка по России</p>
-                            </li>
+                              <a class="menu-top__link menu-top__link--catalog" href="catalog.html">
+                                  Каталог товаров
+                               </a>
+                          </li>
+                          <li class="menu-top__item">
+                              <a class="menu-top__link" href="#">Вязание на заказ</a>
+                          </li>
+                          <li class="menu-top__item">
+                              <form class="search-form" action="" method="get">
+                                  <label class="search-label">Поиск по сайту</label>
+                                  <input class="search-input" type="search" name="search" placeholder="Поиск по сайту">
+                                  <button class="search-submit" type="submit"></button>
+                              </form>
+                          </li>
+                          <li class="menu-top__item menu-top__item--cart">
+                               <a class="menu-top__link menu-top__link--cart" href="#"><i class="menu-top__cart"></i>
+                                   Корзина: пока пуста
+                               </a>
+                          </li>
+                          <li class="menu-top__item menu-top__item--delivery">
+                              <p class="menu-top__text menu-top__text--delivery">Бесплатная доставка по России</p>
+                          </li>
+                          <li class="menu-top__item menu-top__item--new">
+                              <a class="menu-top__link">Новые поступления</a>
+                          </li>
+                          <li class="menu-top__item menu-top__item--sale">
+                               <a class="menu-top__link">Распродажа</a>
+                          </li>
                       </ul>
                  <!-- </nav> -->
          </div>
