--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 </a>
                            </li>
                            <li class="menu-top__item">
-                               <a class="menu-top__link" href="#">Вязание на заказ</a>
+                               <a class="menu-top__link" href="form.html" target="blank">Вязание на заказ</a>
                            </li>
                            <li class="menu-top__item">
                                <form class="search-form" action="" method="get">
