small changes in the catalog

--- a/catalog.html
+++ b/catalog.html
@@ -31,7 +31,7 @@
                                </a>
                           </li>
                           <li class="menu-top__item">
-                              <a class="menu-top__link" href="#">Вязание на заказ</a>
+                              <a class="menu-top__link" href="form.html" target="blank">Вязание на заказ</a>
                           </li>
                           <li class="menu-top__item">
                               <form class="search-form" action="" method="get">
@@ -163,17 +163,6 @@
 
 
 <script src="src/js/main.js"></script>
-       <!--<footer class="footer">
-        <div class="footer__logo"></div>
-            <div class="footer__social">
-              <div class="footer__insta"></div>
-              <div class="footer__facebook"></div>
-              <div class="footer__twitter"></div>
-            </div>
-            <div class="footer__copyright">
-                <p class="footer__creator">Разработано</p>
-            <div class="footer__creator-pic"></div>
-            </div>
-        </footer>-->
+
 </body>
 </html>
