--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                    <!-- </nav> -->
             </div>
             <div class="menu-bottom">
+                
                 <!-- <picture>
                     <source media="(min-width: 320px)" 
                             srcset="src/img/header-mobile-1x.jpg, src/img/header-mobile-2x.jpg 2x">
@@ -75,11 +76,12 @@
                 </picture> -->
                 <h1 class="menu-bottom__title">Милые штуки ручной работы для дома</h1>
                 <ul class="menu-bottom__list">
-                    <div class="menu-bottom__icon1 icon"></div>
+                        <span class="menu-bottom__line"></span>
+                    <span class="menu-bottom__icon1 icon"></span>
                     <li class="menu-bottom__item">
                         <a class="menu-bottom__link" href="#"><p class="menu-bottom__caption">Предметы интерьера</p></a>
                     </li>
-                    <div class="menu-bottom__icon2 icon"></div>
+                    <span class="menu-bottom__icon2 icon"></span>
                     <li class="menu-bottom__item">
                         <a class="menu-bottom__link" href="#"><p class="menu-bottom__caption">Детские игрушки</p></a>
                     </li>
