--- a/catalog.html
+++ b/catalog.html
@@ -96,7 +96,7 @@
                 <div class="catalog__item">
                   <h3 class="catalog__title">Большая корзина для игрушек</h3>
                     <div class="catalog__detail">
-                        <p class="catalog__descr">Диаметр 30 см, высота 30 см</p>
+                        <p class="catalog__descr--line">Диаметр 30 см, высота 30 см</p>
                       <div class="catalog-price">
                         <p class="catalog-price__number">1 500 руб.</p>
                         <a class="catalog-price__link" href="#">
