--- a/form.html
+++ b/form.html
@@ -46,6 +46,7 @@
    <main class="main">
        <div class="page-form">
             <h2 class="page-form__title">Вязание на заказ</h2>
+<div class="main-catalog__title-line"></div>
           <div class="page-form__customer">
             <!--<form class="page-form__customer">-->
                 <p class="page-form__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
