исправила блоки при наведении в нижнем меню

--- a/form.html
+++ b/form.html
@@ -66,27 +66,35 @@
                     </div>
                </section>
                <section class="filter">
-              <div class="filters__line">
-                    <h3 class="filters__title">Цвет</h3>
-                  </div>
-<div class="filter__form filter__form-checkbox">
-
-                       <!--<form class="filter__form filter__form--checkbox">-->
-                          <input class="filter__input" type="checkbox" id="ch-1" name="checkbox" checked>
-                          <label class="filter__label" for="ch-1">Белый</label>
-                          <input class="filter__input" type="checkbox" id="ch-2" name="checkbox" checked>
-                          <label class="filter__label" for="ch-2">Серый</label>
-                          <input class="filter__input" type="checkbox" id="ch-3" name="checkbox">
-                          <label class="filter__label" for="ch-3">«Тиффани»</label>
-                          <input class="filter__input" type="checkbox" id="ch-3" name="checkbox">
-                          <label class="filter__label" for="ch-3">Черный</label>
-                          <input class="filter__input" type="checkbox" id="ch-4" name="checkbox">
-                          <label class="filter__label" for="ch-4">Розовый</label>
-                          <input class="filter__input" type="checkbox" id="ch-5" name="checkbox">
-                          <label class="filter__label" for="ch-5">Оранжевый</label>
-
-                       <!--</form>-->
-                    </div>
+                       <form class="filter__form filter__form--checkbox">
+                            <h3 class="filter__title">Цвет</h3>
+                            <div class="filter__ch-group">
+                                <div class="filter__ch-gr">
+                                    <input class="filter__input" type="checkbox" id="ch-1" name="checkbox" checked>
+                                    <label class="filter__label" for="ch-1">Белый</label>
+                               </div>
+                               <div class="filter__ch-gr">
+                                   <input class="filter__input" type="checkbox" id="ch-2" name="checkbox" checked>
+                                   <label class="filter__label" for="ch-2">Серый</label>
+                               </div>
+                               <div class="filter__ch-gr">
+                                   <input class="filter__input" type="checkbox" id="ch-3" name="checkbox">
+                                   <label class="filter__label" for="ch-3">«Тиффани»</label> 
+                               </div>
+                               <div class="filter__ch-gr">
+                                   <input class="filter__input" type="checkbox" id="ch-3" name="checkbox">
+                                   <label class="filter__label" for="ch-3">Черный</label>  
+                               </div>
+                               <div class="filter__ch-gr">
+                                   <input class="filter__input" type="checkbox" id="ch-4" name="checkbox">
+                                   <label class="filter__label" for="ch-4">Розовый</label> 
+                               </div>
+                               <div class="filter__ch-gr">
+                                   <input class="filter__input" type="checkbox" id="ch-5" name="checkbox">
+                                   <label class="filter__label" for="ch-5">Оранжевый</label>  
+                               </div>
+                           </div>
+                       </form>
                 </section>
                 <section class="customer">
                     <!--<form class="customer__form">-->
